[tool.poetry]
name = "password-brute-force-with-python"
version = "0.1.0"
description = ""
authors = ["Robert Gonda"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
